@@ -92,7 +92,13 @@
 		            <artifactId>maven-compiler-plugin</artifactId>
 		            <version>3.11.0</version>
 		            <configuration>
-		                <release>17</release> 
+		                <source>17</source>
+			        <target>17</target>
+			        <fork>true</fork>
+			        <compilerArgs>
+			          <arg>--add-opens</arg>
+			          <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+			        </compilerArgs> 
 		            </configuration>
 		        </plugin>
 			
